@@ -17,16 +17,16 @@
 
 package org.openqa.selenium.io;
 
+import static java.util.Locale.ROOT;
+import static java.util.Objects.requireNonNull;
+
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Locale;
-import java.util.Objects;
+import java.util.*;
 
 /** Utility methods for common filesystem activities */
 public class FileHandler {
@@ -42,10 +42,10 @@ public class FileHandler {
 
   private static InputStream locateResource(Class<?> forClassLoader, String name)
       throws IOException {
-    String arch =
-        Objects.requireNonNull(System.getProperty("os.arch")).toLowerCase(Locale.ENGLISH) + "/";
-    List<String> alternatives = Arrays.asList(name, "/" + name, arch + name, "/" + arch + name);
-    if (System.getProperty("os.name").toLowerCase(Locale.ENGLISH).contains("mac")) {
+    String arch = requireNonNull(System.getProperty("os.arch")).toLowerCase(ROOT) + "/";
+    List<String> alternatives =
+        new ArrayList<>(List.of(name, "/" + name, arch + name, "/" + arch + name));
+    if (System.getProperty("os.name").toLowerCase(ROOT).contains("mac")) {
       alternatives.add("mac/" + name);
       alternatives.add("/mac/" + name);
     }
